<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:background="@color/light_blue">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/app_name" />
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingLeft="10dp"
                    android:onClick="onClick"
                    android:clickable="true"
                    android:id="@+id/login"
                    android:src="@drawable/btn_next"
                    android:paddingRight="10dp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_gray"
        android:paddingTop="12dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingBottom="12dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/corner_bg">

            <LinearLayout
                android:paddingLeft="17dp"
                android:paddingRight="17dp"
                android:layout_marginTop="24dp"
                android:layout_marginLeft="4dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="17dp"
                    android:layout_height="17dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/main_dot" />

                <ImageView
                    android:layout_width="17dp"
                    android:layout_height="17dp"
                    android:scaleType="fitXY"
                    android:layout_marginLeft="17dp"
                    android:src="@drawable/main_dot" />

                <ImageView
                    android:layout_width="17dp"
                    android:layout_height="17dp"
                    android:scaleType="fitXY"
                    android:layout_marginLeft="17dp"
                    android:src="@drawable/main_dot" />

                <ImageView
                    android:layout_width="17dp"
                    android:layout_height="17dp"
                    android:scaleType="fitXY"
                    android:layout_marginLeft="17dp"
                    android:src="@drawable/main_dot" />

                <ImageView
                    android:layout_width="17dp"
                    android:layout_height="17dp"
                    android:scaleType="fitXY"
                    android:layout_marginLeft="17dp"
                    android:src="@drawable/main_dot" />

                <ImageView
                    android:layout_width="17dp"
                    android:layout_height="17dp"
                    android:scaleType="fitXY"
                    android:layout_marginLeft="17dp"
                    android:src="@drawable/main_dot" />

                <ImageView
                    android:layout_width="17dp"
                    android:layout_height="17dp"
                    android:scaleType="fitXY"
                    android:layout_marginLeft="17dp"
                    android:src="@drawable/main_dot" />

                <ImageView
                    android:layout_width="17dp"
                    android:layout_height="17dp"
                    android:scaleType="fitXY"
                    android:layout_marginLeft="17dp"
                    android:src="@drawable/main_dot" />

                <ImageView
                    android:layout_width="17dp"
                    android:layout_height="17dp"
                    android:scaleType="fitXY"
                    android:layout_marginLeft="17dp"
                    android:src="@drawable/main_dot" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/line_bottom_border"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:paddingLeft="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/phone"
                        android:textSize="16dp" />

                    <EditText
                        android:layout_gravity="center_horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:ems="10"
                        android:hint="@string/input_phone"
                        android:maxLength="11"
                        android:textSize="16dp"
                        android:background="@color/no"
                        android:id="@+id/phone"
                        android:layout_marginLeft="10dp" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/line_bottom_border"
                    android:paddingLeft="20dp">

                    <LinearLayout
                        android:paddingTop="12dp"
                        android:paddingBottom="12dp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_weight="7">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/verify"
                            android:textSize="16dp" />

                        <EditText
                            android:layout_gravity="center_horizontal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:inputType="phone"
                            android:ems="10"
                            android:hint="@string/input_verify"
                            android:maxLength="11"
                            android:textSize="16dp"
                            android:background="@color/no"
                            android:id="@+id/verify"
                            android:layout_marginLeft="10dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:paddingTop="6dp"
                        android:paddingBottom="6dp"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3">

                        <Button
                            android:id="@+id/get_verify"
                            android:onClick="onClick"
                            android:paddingLeft="8dp"
                            android:paddingRight="8dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="12dp"
                            android:background="@drawable/btn_bg"
                            android:text="@string/get_verify"
                            android:textColor="@color/white"
                            />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>


        </LinearLayout>
    </LinearLayout>
</LinearLayout>