<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:background="@color/light_blue">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingLeft="10dp"
                    android:onClick="onClick"
                    android:clickable="true"
                    android:id="@+id/back"
                    android:src="@drawable/btn_back"
                    android:paddingRight="10dp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/app_name" />
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingLeft="10dp"
                    android:onClick="onClick"
                    android:clickable="true"
                    android:id="@+id/create"
                    android:src="@drawable/btn_next"
                    android:paddingRight="10dp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_gray"
        android:paddingTop="12dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingBottom="12dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/corner_bg">

            <LinearLayout
                android:paddingLeft="17dp"
                android:paddingRight="17dp"
                android:layout_marginTop="24dp"
                android:layout_marginLeft="4dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="17dp"
                    android:layout_height="17dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/main_dot" />

                <ImageView
                    android:layout_width="17dp"
                    android:layout_height="17dp"
                    android:scaleType="fitXY"
                    android:layout_marginLeft="17dp"
                    android:src="@drawable/main_dot" />

                <ImageView
                    android:layout_width="17dp"
                    android:layout_height="17dp"
                    android:scaleType="fitXY"
                    android:layout_marginLeft="17dp"
                    android:src="@drawable/main_dot" />

                <ImageView
                    android:layout_width="17dp"
                    android:layout_height="17dp"
                    android:scaleType="fitXY"
                    android:layout_marginLeft="17dp"
                    android:src="@drawable/main_dot" />

                <ImageView
                    android:layout_width="17dp"
                    android:layout_height="17dp"
                    android:scaleType="fitXY"
                    android:layout_marginLeft="17dp"
                    android:src="@drawable/main_dot" />

                <ImageView
                    android:layout_width="17dp"
                    android:layout_height="17dp"
                    android:scaleType="fitXY"
                    android:layout_marginLeft="17dp"
                    android:src="@drawable/main_dot" />

                <ImageView
                    android:layout_width="17dp"
                    android:layout_height="17dp"
                    android:scaleType="fitXY"
                    android:layout_marginLeft="17dp"
                    android:src="@drawable/main_dot" />

                <ImageView
                    android:layout_width="17dp"
                    android:layout_height="17dp"
                    android:scaleType="fitXY"
                    android:layout_marginLeft="17dp"
                    android:src="@drawable/main_dot" />

                <ImageView
                    android:layout_width="17dp"
                    android:layout_height="17dp"
                    android:scaleType="fitXY"
                    android:layout_marginLeft="17dp"
                    android:src="@drawable/main_dot" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/line_border">

                    <EditText
                        android:layout_gravity="center_vertical"
                        android:id="@+id/title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/no"
                        android:textSize="16dp"
                        android:paddingLeft="18dp"
                        android:maxLines="1"
                        android:maxLength="20"
                        android:hint="@string/input_title" />
                </LinearLayout>

                <LinearLayout
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/line_bottom_border">

                    <TextView
                        android:layout_gravity="center_vertical"
                        android:id="@+id/time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/no"
                        android:textSize="16dp"
                        android:paddingLeft="18dp"
                        android:textColor="@color/deep_blue"
                        android:hint="时间" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/line_bottom_border">

                    <TextView
                        android:layout_gravity="center_vertical"
                        android:paddingLeft="18dp"
                        android:textColor="@color/deep_gray"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="7"
                        android:textSize="16dp"
                        android:text="重复" />

                    <Spinner
                        android:layout_gravity="center_vertical"
                        android:background="@color/no"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:spinnerMode="dialog"
                        android:id="@+id/repeat" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/line_bottom_border">

                    <TextView
                        android:layout_gravity="center_vertical"
                        android:paddingTop="12dp"
                        android:paddingBottom="12dp"
                        android:paddingLeft="18dp"
                        android:textColor="@color/deep_gray"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="7"
                        android:textSize="16dp"
                        android:text="隐藏提醒" />

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3">

                        <com.vikaa.lubbi.widget.SwitchView
                            android:id="@+id/hide"
                            android:layout_gravity="center_vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/line_bottom_border">

                    <EditText
                        android:layout_gravity="center_vertical"
                        android:id="@+id/mark"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/no"
                        android:textSize="16dp"
                        android:paddingLeft="18dp"
                        android:maxLines="3"
                        android:hint="@string/mark" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_gravity="center_horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical">

                            <DatePicker
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/datePicker"
                                android:calendarViewShown="false" />

                            <TimePicker
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/timePicker" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>


        </LinearLayout>
    </LinearLayout>
</LinearLayout>